--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.localization": "https://github.com/codewriter-packages/Unity-Localization-Stub-for-Tri-Inspector.git",
+    "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.9.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
